Using the java sound parser to parse the URI.